fiddled around and refactored images

--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
 
 	<link rel="icon" href="https://www.google.com/favicon.ico" type="image/x-icon">
 	<link rel="stylesheet" href="styles.css">
-
-	<script src="src/app.js" type="module" defer></script>
 </head>
 <body>
 	<canvas></canvas>
@@ -29,57 +27,24 @@
 
 	<div id="skills-container">
 		<div class="skill">
-			<img src="images/css-logo.png" alt="css skill logo">
+			<img src="images/icons/css.png" alt="css skill icon">
 			<p>CSS</p>
 		</div>
 
 		<div class="skill">
-			<img src="images/javascript-logo.png" alt="javascript skill logo">
+			<img src="images/icons/javascript.png" alt="javascript skill icon">
 			<p>Javascript</p>
 		</div>
 
 		<div class="skill">
-			<img src="images/webgpu-logo.svg" alt="webgpu skill logo">
+			<img src="images/icons/webgpu.png" alt="webgpu skill icon">
 			<p>WebGPU</p>
-		</div>
-
-		<div class="skill">
-			<img src="images/cpp-logo.png" alt="javascript skill logo">
-			<p>C++</p>
 		</div>
 	</div>
 
 	<h2 id="projects" class="section-header">Projects</h2>
 
 	<div id="projects-container">
-		<div class="project">
-			<img src="images/projects/gravity-simulation.png" alt="gravity simulation project">
-			
-			<p class="project-title">Gravity Simulation</p>
-			<p class="project-description">Simulates the physics between thousands of individual particles</p>
-		</div>
-
-		<div class="project">
-			<img src="images/projects/gravity-simulation.png" alt="gravity simulation project">
-			
-			<p class="project-title">Gravity Simulation</p>
-			<p class="project-description">Simulates the physics between thousands of individual particles</p>
-		</div>
-
-		<div class="project">
-			<img src="images/projects/gravity-simulation.png" alt="gravity simulation project">
-			
-			<p class="project-title">Gravity Simulation</p>
-			<p class="project-description">Simulates the physics between thousands of individual particles</p>
-		</div>
-
-		<div class="project">
-			<img src="images/projects/gravity-simulation.png" alt="gravity simulation project">
-			
-			<p class="project-title">Gravity Simulation</p>
-			<p class="project-description">Simulates the physics between thousands of individual particles</p>
-		</div>
-
 		<div class="project">
 			<img src="images/projects/gravity-simulation.png" alt="gravity simulation project">
 			
