added internal link to project, made more responsive

--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
 	</div>
 
 	<nav id="navbar">
-		<a href="#top">home</a>
 		<a href="#projects">projects</a>
 		<a href="#about">about</a>
 		<a href="#resume">resume</a>
@@ -44,12 +43,27 @@
 
 	<div id="projects-container">
 		<div class="project">
-			<a target="_blank" class="project-link" href="https://github.com/colemaron/fractals">
-				<img src="images/projects/fractal.png" alt="fractal project">
+			<a target="_blank" class="project-link" href="projects\fractals\index.html">
+				<img src="projects/fractals/image.png" alt="fractal project">
 			</a>
 
 			<p class="project-title">Fractal Rendering</p>
-			<p class="project-description">Uses an iterative set of rules to efficiently render fascinating fractals and allows zooming and panning to explore it</p>
+			<p class="project-description">Uses an iterative set of rules to efficiently render fractals and allows zooming to explore it</p>
+
+			<div class="project-tools">
+				<p>Multithreading</p>
+				<p>GPU Rendering</p>
+				<p>Custom Libraries</p>
+			</div>
+		</div>
+
+		<div class="project">
+			<a target="_blank" class="project-link" href="projects\fractals\index.html">
+				<img src="projects/fractals/image.png" alt="fractal project">
+			</a>
+
+			<p class="project-title">Fractal Rendering</p>
+			<p class="project-description">Uses an iterative set of rules to efficiently render fractals and allows zooming to explore it</p>
 
 			<div class="project-tools">
 				<p>Multithreading</p>
