--- a/index.html
+++ b/index.html
@@ -7,41 +7,74 @@
 
 	<link rel="icon" href="https://www.google.com/favicon.ico" type="image/x-icon">
 	<link rel="stylesheet" href="styles.css">
+
+	<script src="app.js" defer></script>
 </head>
 <body>
+	<!-- main header and hero text -->
+
 	<div id="self-info">
 		<h1 id="hero-text">Developer and Designer</h1>
 
 		<p>2+ years of experience - quick to learn and adapt</p>
 	</div>
 
+	<!-- skills -->
+
 	<div id="skills-container">
 		<div class="skill">
-			<svg fill="#1572B6" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><title>CSS3</title><path d="M1.5 0h21l-1.91 21.563L11.977 24l-8.565-2.438L1.5 0zm17.09 4.413L5.41 4.41l.213 2.622 10.125.002-.255 2.716h-6.64l.24 2.573h6.182l-.366 3.523-2.91.804-2.956-.81-.188-2.11h-2.61l.29 3.855L12 19.288l5.373-1.53L18.59 4.414z"/></svg>
+			<svg fill="#E34F26" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M1.5 0h21l-1.91 21.563L11.977 24l-8.564-2.438L1.5 0zm7.031 9.75l-.232-2.718 10.059.003.23-2.622L5.412 4.41l.698 8.01h9.126l-.326 3.426-2.91.804-2.955-.81-.188-2.11H6.248l.33 4.171L12 19.351l5.379-1.443.744-8.157H8.531z"/></svg>
+			<p>HTML</p>
+		</div>
+
+		<div class="skill">
+			<svg fill="#1572B6" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M1.5 0h21l-1.91 21.563L11.977 24l-8.565-2.438L1.5 0zm17.09 4.413L5.41 4.41l.213 2.622 10.125.002-.255 2.716h-6.64l.24 2.573h6.182l-.366 3.523-2.91.804-2.956-.81-.188-2.11h-2.61l.29 3.855L12 19.288l5.373-1.53L18.59 4.414z"/></svg>
 			<p>CSS</p>
 		</div>
 
 		<div class="skill">
-			<svg fill="#F7DF1E" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><title>JavaScript</title><path d="M0 0h24v24H0V0zm22.034 18.276c-.175-1.095-.888-2.015-3.003-2.873-.736-.345-1.554-.585-1.797-1.14-.091-.33-.105-.51-.046-.705.15-.646.915-.84 1.515-.66.39.12.75.42.976.9 1.034-.676 1.034-.676 1.755-1.125-.27-.42-.404-.601-.586-.78-.63-.705-1.469-1.065-2.834-1.034l-.705.089c-.676.165-1.32.525-1.71 1.005-1.14 1.291-.811 3.541.569 4.471 1.365 1.02 3.361 1.244 3.616 2.205.24 1.17-.87 1.545-1.966 1.41-.811-.18-1.26-.586-1.755-1.336l-1.83 1.051c.21.48.45.689.81 1.109 1.74 1.756 6.09 1.666 6.871-1.004.029-.09.24-.705.074-1.65l.046.067zm-8.983-7.245h-2.248c0 1.938-.009 3.864-.009 5.805 0 1.232.063 2.363-.138 2.711-.33.689-1.18.601-1.566.48-.396-.196-.597-.466-.83-.855-.063-.105-.11-.196-.127-.196l-1.825 1.125c.305.63.75 1.172 1.324 1.517.855.51 2.004.675 3.207.405.783-.226 1.458-.691 1.811-1.411.51-.93.402-2.07.397-3.346.012-2.054 0-4.109 0-6.179l.004-.056z"/></svg>
+			<svg fill="#F7DF1E" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M0 0h24v24H0V0zm22.034 18.276c-.175-1.095-.888-2.015-3.003-2.873-.736-.345-1.554-.585-1.797-1.14-.091-.33-.105-.51-.046-.705.15-.646.915-.84 1.515-.66.39.12.75.42.976.9 1.034-.676 1.034-.676 1.755-1.125-.27-.42-.404-.601-.586-.78-.63-.705-1.469-1.065-2.834-1.034l-.705.089c-.676.165-1.32.525-1.71 1.005-1.14 1.291-.811 3.541.569 4.471 1.365 1.02 3.361 1.244 3.616 2.205.24 1.17-.87 1.545-1.966 1.41-.811-.18-1.26-.586-1.755-1.336l-1.83 1.051c.21.48.45.689.81 1.109 1.74 1.756 6.09 1.666 6.871-1.004.029-.09.24-.705.074-1.65l.046.067zm-8.983-7.245h-2.248c0 1.938-.009 3.864-.009 5.805 0 1.232.063 2.363-.138 2.711-.33.689-1.18.601-1.566.48-.396-.196-.597-.466-.83-.855-.063-.105-.11-.196-.127-.196l-1.825 1.125c.305.63.75 1.172 1.324 1.517.855.51 2.004.675 3.207.405.783-.226 1.458-.691 1.811-1.411.51-.93.402-2.07.397-3.346.012-2.054 0-4.109 0-6.179l.004-.056z"/></svg>
 			<p>Javascript</p>
 		</div>
 
 		<div class="skill">
-			<svg fill="#005A9C" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><title>WebGPU</title><path d="m0 4.784 8.652 14.432 8.652-14.432zm22.032.145L20.07 8.202H24L22.032 4.93zm-4.46 0-4.192 6.993h8.384zm2.498 3.575 1.962 3.273L24 8.504zm-6.69 3.72 4.192 6.992 4.192-6.992z"/></svg>
+			<svg fill="#005A9C" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="m0 4.784 8.652 14.432 8.652-14.432zm22.032.145L20.07 8.202H24L22.032 4.93zm-4.46 0-4.192 6.993h8.384zm2.498 3.575 1.962 3.273L24 8.504zm-6.69 3.72 4.192 6.992 4.192-6.992z"/></svg>
 			<p>WebGPU</p>
 		</div>
 	</div>
 
+	<!-- sticky navbar -->
+
 	<nav id="navbar">
+		<a href="#top">home</a>
 		<a href="#projects">projects</a>
 		<a href="#about">about</a>
 		<a href="#resume">resume</a>
 		<a href="#contact">contact</a>
 	</nav>
 
+	<!-- projects -->
+
 	<h2 id="projects" class="section-header">Projects</h2>
 
 	<div id="projects-container">
+		<!-- fractal project -->
+
+		<div class="project">
+			<a target="_blank" class="project-link" href="projects\fractals\index.html">
+				<img src="projects/fractals/image.png" alt="fractal project">
+			</a>
+
+			<p class="project-title">Fractal Rendering</p>
+			<p class="project-description">Uses an iterative set of rules to efficiently render fractals and allows zooming to explore it</p>
+
+			<div class="project-tools">
+				<p>Multithreading</p>
+				<p>GPU Rendering</p>
+				<p>Custom Libraries</p>
+			</div>
+		</div>
+		
 		<div class="project">
 			<a target="_blank" class="project-link" href="projects\fractals\index.html">
 				<img src="projects/fractals/image.png" alt="fractal project">
@@ -72,6 +105,8 @@
 			</div>
 		</div>
 	</div>
+
+	<!-- about -->
 
 	<h2 id="about" class="section-header">About</h2>
 
@@ -85,10 +120,36 @@
 		</div>
 	</div>
 
-	<h2 id="resume" class="section-header">Resume</h2>
+	<!-- contact -->
 
-	<div id="resume-container">
-		
+	<h2 id="contact" class="section-header">Contact</h2>
+
+	<div id="contact-container">
+		<div>
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos, eius! Omnis, eaque officia! In sint consequatur nisi expedita soluta sapiente, animi voluptate dicta eius inventore eaque earum, quae veritatis recusandae?
+		</div>
+
+		<div id="contact-form">
+			<div class="input-section">
+				<label>First Name</label>
+				<input class="contact-input" placeholder="Enter first name" type="text">
+			</div>
+
+			<div class="input-section">
+				<label>Last Name</label>
+				<input class="contact-input" placeholder="Enter last name" type="text">
+			</div>
+
+			<div style="grid-column: 2 span;" class="input-section">
+				<label>Email</label>
+				<input class="contact-input" placeholder="Enter email address" type="text">
+			</div>
+
+			<div style="grid-column: 2 span;" class="input-section">
+				<label>Body</label>
+				<textarea class="contact-input" placeholder="Enter message body"></textarea>
+			</div>
+		</div>
 	</div>
 
 	<footer>
@@ -98,21 +159,21 @@
 			<p>(623) 826-5953</p>
 			<a target="_blank" href="https://mail.google.com/mail/?view=cm&fs=1&to=colemaron@icloud.com">colemaron@icloud.com</a>
 		</div>
+		
+		<div class="footer-section">
+			<p class="footer-header">Information</p>
+
+			<a id="resume" target="_blank" href="resources/resume.html">Resume</a>
+		</div>
 
 		<div class="footer-section">
 			<p class="footer-header">Links</p>
 
 			<div id="links-container">
 				<a target="_blank" href="https://github.com/colemaron">
-					<svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><title>GitHub</title><path d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12"/></svg>
+					<svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12"/></svg>
 				</a>
 			</div>
-		</div>
-
-		<div class="footer-section">
-			<p class="footer-header">idk</p>
-
-			something
 		</div>
 
 		<div class="footer-section">
