--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<div id="self-info">
 		<h1 id="hero-text">Developer and Designer</h1>
 
-		<p>2+ years of experience - quick to learn and adapt</p>
+		<p>3+ years of experience - quick to learn and adapt</p>
 	</div>
 
 	<!-- skills -->
@@ -62,8 +62,8 @@
 		<!-- fractal project -->
 
 		<div class="project">
-			<a target="_blank" class="project-link" href="projects\fractals\index.html">
-				<img src="projects/fractals/image.png" alt="fractal project">
+			<a target="_blank" class="project-link" href="https://colemaron.github.io/fractal-rendering/">
+				<img src="projects/fractals.png" alt="fractals">
 			</a>
 
 			<p class="project-title">Fractal Rendering</p>
@@ -76,20 +76,17 @@
 			</div>
 		</div>
 
-		<!-- fractal project -->
-
 		<div class="project">
-			<a target="_blank" class="project-link" href="projects\fractals\index.html">
-				<img src="projects/fractals/image.png" alt="fractal project">
+			<a target="_blank" class="project-link" href="https://colemaron.github.io/note-manager/">
+				<img src="projects/notes.png" alt="notes app">
 			</a>
 
-			<p class="project-title">Fractal Rendering</p>
-			<p class="project-description">Uses an iterative set of rules to efficiently render fractals and allows zooming to explore it</p>
+			<p class="project-title">Note Taking App</p>
+			<p class="project-description">Stores notes on the users computer in an easily manageable way. Can search through and add different tags to allow for easier organization</p>
 
 			<div class="project-tools">
-				<p>Multithreading</p>
-				<p>GPU Rendering</p>
-				<p>Custom Libraries</p>
+				<p>Web Storage</p>
+				<p>Quick Searching</p>
 			</div>
 		</div>
 	</div>
@@ -100,7 +97,7 @@
 
 	<div id="about-container">
 		<div>
-			I’m 16 and in high school, and spend a good amount of time working on coding projects at home. I enjoy building simulations, often experimenting with ideas like gravity and fluid dynamics. These projects give me the chance to break down complex systems and turn them into something functional and interesting.
+			I’m 17 and in high school, and spend a good amount of time working on coding projects at home. I enjoy building simulations, often experimenting with ideas like gravity and fluid dynamics. These projects give me the chance to break down complex systems and turn them into something functional and interesting.
 		</div>
 
 		<div>
@@ -145,7 +142,7 @@
 			<p class="footer-header">Contact</p>
 
 			<p>(623) 826-5953</p>
-			<p>colemaron@icloud.com</p>
+			<a href="mailto:colemaron@icloud.com">colemaron@icloud.com</a>
 		</div>
 		
 		<div class="footer-section">
@@ -165,7 +162,7 @@
 		</div>
 
 		<div class="footer-section">
-			&copy; 2024 Cole Maron
+			&copy; 2025 Cole Maron
 		</div>
 	</footer>
 </body>
